WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90779
Web Inspector: inspector does not reflect newly created text nodes from contenteditable
https://bugs.webkit.org/show_bug.cgi?id=90779
Summary
Web Inspector: inspector does not reflect newly created text nodes from conte...
Pavel Feldman
Reported
2012-07-09 05:25:50 PDT
Downstream bug:
http://code.google.com/p/chromium/issues/detail?id=136230
. We need to report first text node as inserted, otherwise we fail to report character data modified on it.
Attachments
Patch
(4.92 KB, patch)
2012-07-09 05:34 PDT
,
Pavel Feldman
vsevik
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2012-07-09 05:34:26 PDT
Created
attachment 151235
[details]
Patch
Pavel Feldman
Comment 2
2012-07-09 06:45:50 PDT
Committed
r122106
: <
http://trac.webkit.org/changeset/122106
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug