Web Inspector: inspector does not reflect newly created text nodes from contenteditable https://bugs.webkit.org/show_bug.cgi?id=90779

Reviewed by Vsevolod Vlasov.

Source/WebCore:

We need to report first text node as inserted, otherwise we fail to report character data modified on it.

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::characterDataModified):

LayoutTests:

* inspector/elements/insert-node-expected.txt:
* inspector/elements/insert-node.html:

Canonical link: https://commits.webkit.org/108618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122106 268f45cc-cd09-0410-ab3c-d52691b4dbfc